Improved icon selector + small fixes

--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.html
@@ -1,5 +1,5 @@
 <section [hidden]="!show || showCreateControl">
-  <main class="container">
+<main class="container-fluid">
     <div class="form-group">
       <input [(ngModel)]="title" autofocus placeholder="Title" class="form-control form-control-lg" />
     </div>
