--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page/page.component.html
@@ -1,14 +1,16 @@
-<div class="d-flex bd-highlight">
+<div class="container-fluid">
+  <div class="d-flex bd-highlight">
     <div class="p-2 w-100 bd-highlight">
-      <h3>{{details?.title}}</h3>
+      <h3>{{ details?.title }}</h3>
     </div>
     <div class="p-2 flex-shrink-1 bd-highlight">
-        <a [routerLink]="['/edit', name]" class="align-middle">Edit</a>
+      <a [routerLink]="['/edit', name]" class="align-middle">Edit</a>
     </div>
   </div>
 
-<rc-control-view
-  *ngFor="let item of details.controls"
-  [control]="item"
-  [ngClass]='item.col | columnClassName'
+  <rc-control-view
+    *ngFor="let item of details.controls"
+    [control]="item"
+    [ngClass]="item.col | columnClassName"
   ></rc-control-view>
+</div>
