--- a/RemoteController/RemoteController.Client/ClientApp/src/core/components/icon-selector/icon-selector.component.css
+++ b/RemoteController/RemoteController.Client/ClientApp/src/core/components/icon-selector/icon-selector.component.css
@@ -2,8 +2,13 @@ fa-icon {
   display: inline-block;
   padding: 5px;
   margin: 2px;
+  height: 60px;
+  min-width: 60px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 fa-icon:hover {
   background: lightpink;
+  color: red;
 }
