--- a/RemoteController/RemoteController.Client/ClientApp/src/styles.css
+++ b/RemoteController/RemoteController.Client/ClientApp/src/styles.css
@@ -36,3 +36,14 @@ section > .content, section > main {
   overflow-y: auto;
   min-height: 0px;
 }
+
+/* https://stackoverflow.com/a/9314458/1763586 */
+.no-selection {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
