--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.css
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/control-editor/control-editor.component.css
@@ -2,3 +2,13 @@
   height: 100%;
   display: block;
 }
+.control-editor-controls {
+  margin: 0 -2px;
+}
+.control-editor-controls div {
+  display: inline-block;
+  padding: 0 2px;
+}
+.control-editor-controls button {
+  width: 100%;
+}
