--- a/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.css
+++ b/RemoteController/RemoteController.Client/ClientApp/src/app/components/page-editor/page-editor.component.css
@@ -1,3 +1,14 @@
 :host {
   height: 100%;
 }
+
+.editor-controls {
+  margin: 0 -2px;
+}
+.editor-controls div {
+  display: inline-block;
+  padding: 0 2px;
+}
+.editor-controls button {
+  width: 100%;
+}
