--- a/RemoteController/RemoteController/MainWindow.xaml
+++ b/RemoteController/RemoteController/MainWindow.xaml
@@ -4,7 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RemoteController"
+        xmlns:vm="clr-namespace:RemoteController.ViewModels"
+        xmlns:ioCs="clr-namespace:RemoteController.IoCs"
         mc:Ignorable="d"
+        DataContext="{ioCs:IoC vm:MainViewModel}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
 
