--- a/RemoteController/RemoteController/App.xaml
+++ b/RemoteController/RemoteController/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="RemoteController.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RemoteController"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources.xaml" />
     </Application.Resources>
 </Application>
