--- a/RemoteController/RemoteController/App.xaml
+++ b/RemoteController/RemoteController/App.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <!--<ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources.xaml" />-->
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources.xaml" />
     </Application.Resources>
 </Application>
