--- a/RemoteController/RemoteController/Resources/Generic/Colors.xaml
+++ b/RemoteController/RemoteController/Resources/Generic/Colors.xaml
@@ -1,4 +1,108 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+
+    <!--Colors from: https://coolors.co/0267c1-->
+    <Color x:Key="Color.Primary.Lightest">#36A0FD</Color>
+    <Color x:Key="Color.Primary.Lighter">#027FED</Color>
+    <Color x:Key="Color.Primary">#0267C1</Color>
+    <Color x:Key="Color.Primary.Darker">#0258A4</Color>
+    <Color x:Key="Color.Primary.Darkest">#01427B</Color>
+
+    <Color x:Key="Color.White">#FFFFFF</Color>
+    <SolidColorBrush
+        x:Key="Brush.White"
+        Color="{StaticResource Color.White}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.FC">#FCFCFC</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.FC"
+        Color="{StaticResource Color.Grey.FC}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.F4">#F4F4F4</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.F4"
+        Color="{StaticResource Color.Grey.F4}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.EC">#ECECEC</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.EC"
+        Color="{StaticResource Color.Grey.EC}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.DE">#DEDEDE</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.DE"
+        Color="{StaticResource Color.Grey.DE}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.C">#CCCCCC</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.C"
+        Color="{StaticResource Color.Grey.C}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.8">#888888</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.8"
+        Color="{StaticResource Color.Grey.8}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.7">#777777</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.7"
+        Color="{StaticResource Color.Grey.7}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.6">#666666</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.6"
+        Color="{StaticResource Color.Grey.6}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.5">#555555</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.5"
+        Color="{StaticResource Color.Grey.5}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.37">#373737</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.37"
+        Color="{StaticResource Color.Grey.37}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.3">#333333</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.3"
+        Color="{StaticResource Color.Grey.3}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.2C">#2C2C2C</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.2C"
+        Color="{StaticResource Color.Grey.2C}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.2">#222222</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.2"
+        Color="{StaticResource Color.Grey.2}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Grey.1">#111111</Color>
+    <SolidColorBrush
+        x:Key="Brush.Grey.1"
+        Color="{StaticResource Color.Grey.1}"
+        o:Freeze="True" />
+
+    <Color x:Key="Color.Black">#000000</Color>
+    <SolidColorBrush
+        x:Key="Brush.Black"
+        Color="{StaticResource Color.Black}"
+        o:Freeze="True" />
 </ResourceDictionary>
