Moved styles and resources. Created brushes for primary colors. Added button style for primary and secondary.

--- a/RemoteController/RemoteController/MainWindow.xaml
+++ b/RemoteController/RemoteController/MainWindow.xaml
@@ -57,6 +57,7 @@
                             Orientation="Horizontal"
                             HorizontalAlignment="Right">
                             <Button
+                                Style="{StaticResource Button.Primary}"
                                 Content="Change directory" />
                             <Button
                                 Content="Remove" />
