Added visibility converter.

--- a/RemoteController/RemoteController/Resources/Generic/Converters.xaml
+++ b/RemoteController/RemoteController/Resources/Generic/Converters.xaml
@@ -7,4 +7,6 @@
     <c:InverseBooleanConverter x:Key="Converter.InverseBoolean" />
     <c:IsNotNullConverter x:Key="Converter.IsNotNull" />
     <c:IsNullConverter x:Key="Converter.IsNull" />
+
+    <BooleanToVisibilityConverter x:Key="Converter.BooleanToVisibility" />
 </ResourceDictionary>
