--- a/RemoteController/RemoteController/MainWindow.xaml
+++ b/RemoteController/RemoteController/MainWindow.xaml
@@ -1,16 +1,19 @@
-﻿<Window x:Class="RemoteController.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RemoteController"
-        xmlns:vm="clr-namespace:RemoteController.ViewModels"
-        xmlns:ioCs="clr-namespace:RemoteController.IoCs"
-        xmlns:webSocket="clr-namespace:RemoteController.WebSocket;assembly=RemoteController.WebSocket"
-        mc:Ignorable="d"
-        DataContext="{ioCs:IoC vm:MainViewModel}"
-        d:DataContext="{d:DesignInstance vm:MainViewModel}"
-        Title="MainWindow" Height="450" Width="800">
+﻿<c:StyledWindow 
+    x:Class="RemoteController.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:RemoteController.ViewModels"
+    xmlns:ioCs="clr-namespace:RemoteController.IoCs"
+    xmlns:c="clr-namespace:RemoteController.Controls"
+    mc:Ignorable="d"
+    Icon="icon.ico"
+    DataContext="{ioCs:IoC vm:MainViewModel}"
+    d:DataContext="{d:DesignInstance vm:MainViewModel}"
+    Title="MainWindow" 
+    Height="450" 
+    Width="800">
     <StackPanel Orientation="Vertical">
         
         <TextBlock 
@@ -68,4 +71,4 @@
             
         </ItemsControl>
     </StackPanel>
-</Window>
+</c:StyledWindow>
