--- a/RemoteController/RemoteController/Themes/Generic.xaml
+++ b/RemoteController/RemoteController/Themes/Generic.xaml
@@ -95,7 +95,7 @@
         <Setter Property="Command" Value="{Binding Source={x:Static SystemCommands.CloseWindowCommand}}" />
         <Style.Resources>
             <SolidColorBrush x:Key="{x:Static ap:ResourceKeys+Brushes.Highlight}" Color="{StaticResource {x:Static controls:ResourceKeys+Colors.Critical}}" />
-            <SolidColorBrush x:Key="{x:Static ap:ResourceKeys+Brushes.Active}" Color="{StaticResource {x:Static ap:ResourceKeys+Colors.Critical}}"/>
+            <SolidColorBrush x:Key="{x:Static ap:ResourceKeys+Brushes.Active}" Color="#A01B00"/>
         </Style.Resources>
     </Style>
 
@@ -287,6 +287,7 @@
     <Style TargetType="ap:StyledWindow">
         <Setter Property="Foreground" Value="{DynamicResource {x:Static ap:ResourceKeys+Brushes.Foreground}}" />
         <Setter Property="Background" Value="{DynamicResource {x:Static ap:ResourceKeys+Brushes.Background}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static ap:ResourceKeys+Brushes.Background}}"/>
         <Setter Property="FontFamily" Value="{DynamicResource Font.Family.Default}" />
         <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
         <Setter Property="UseLayoutRounding" Value="True" />
@@ -300,7 +301,7 @@
                         Margin="{Binding Source={x:Static SystemParameters.WindowNonClientFrameThickness}}" 
                         Background="{TemplateBinding Background}">
                         <Grid>
-                            <Border BorderThickness="1">
+                            <Border BorderThickness="1" BorderBrush="{TemplateBinding BorderBrush}">
                                 <AdornerDecorator>
                                     <Grid x:Name="LayoutRoot">
                                         <Grid.RowDefinitions>
